--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode=development",
-    "build": "webpack --mode=production"
+    "start": "concurrently \"webpack serve --mode=development --open\" \"npx tailwindcss -i ./src/input.css -o ./src/output.css --watch\"",
+    "build": "webpack --mode=production",
+    "css": "npx tailwindcss -i ./src/input.css -o ./src/output.css"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
@@ -16,6 +17,7 @@
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.1.0",
     "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
     "tailwindcss": "^3.1.4",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
@@ -25,8 +27,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^7.2.2",
     "core-js": "^3.15.2",
     "daisyui": "^2.17.0",
-    "regenerator-runtime": "^0.13.9"
+    "postcss-preset-env": "^7.7.2",
+    "regenerator-runtime": "^0.13.9",
+    "style-loader": "^3.3.1"
   }
 }
