--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "concurrently": "^7.2.2",
     "core-js": "^3.15.2",
     "daisyui": "^2.17.0",
+    "moment": "^2.29.3",
     "postcss-preset-env": "^7.7.2",
     "regenerator-runtime": "^0.13.9",
     "style-loader": "^3.3.1"
